# yaccas

./: Cargo.toml  README.md
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js
doc/src/yaccas/src/: lib.rs.html
doc/yaccas/: default_scanner.m.html  index.html
doc/yaccas/arguments/: struct.Value.html  trait.Parsable.html
doc/yaccas/arguments/command/: struct.Command.html  type.AbortReason.html
doc/yaccas/arguments/metadata/: struct.Metadata.html
doc/yaccas/parser/free_argument_support/: FreeArgumentSupport.t.html  enum.FreeArgumentSupport.html
doc/yaccas/parser/result/: enum.Result.html
doc/yaccas/scanner/: enum.Token.html  sidebar-items.js  struct.Windows.html
docs/: search-index.js
docs/yaccas/: macro.default_scanner.html  sidebar-items.js
docs/yaccas/arguments/: AbortReason.t.html  enum.Argument.html  index.html  sidebar-items.js  struct.Command.html  struct.Flag.html  struct.Metadata.html  type.AbortReason.html
docs/yaccas/parser/: enum.FreeArgumentSupport.html  enum.Result.html  index.html  sidebar-items.js  struct.Parser.html
docs/yaccas/scanner/: Unix.t.html  index.html  struct.Unix.html  trait.Scanner.html
src/: lib.rs
src/arguments/: argument.rs  arguments.rs  command.rs  flag.rs  metadata.rs  mod.rs  value.rs
src/parser/: callback.rs  free_argument_support.rs  mod.rs  parser.rs  result.rs
src/scanner/: mod.rs  scanner.rs  scanner_unix.rs  scanner_windows.rs  token.rs
tests/: example.rs
(+29 files in other folders)
